# borneo-doser

./: README.md
casing/: 12mm-front-button.step  Doser-4.FCStd  Doser-4.FCStd1  Doser.FCStd  Doser.FCStd1  LEDAssem1.STEP  pump.step
firmware/: .clang-format  CMakeLists.txt  README.md  burn.bat  format-code.bat  sdkconfig
firmware/cmake/: ClangFormat.cmake
firmware/components/borneo/: CMakeLists.txt
firmware/components/borneo/include/borneo/: broadcast.h  common.h  cron.h  device-config.h  pid.h  rpc-server.h  rpc.h  rtc.h  serial.h  sntp.h
firmware/components/borneo/include/borneo/devices/: buttons.h  device.h  ds1302.h  leds.h  wifi.h
firmware/components/borneo/include/borneo/rpc/: sys.h
firmware/components/borneo/include/borneo/utils/: bcd.h  bit-utils.h  buffer-writer.h  md5.h  time.h
firmware/components/borneo/src/: broadcast.c  cron.c  pid.c  rpc-server.c  rpc.c  rtc.c  serial.c  sntp.c
firmware/components/borneo/src/devices/: buttons.c  ds1302.c  leds.c  wifi.c
firmware/components/borneo/src/rpc/sys/: rpc-sys.c
firmware/components/borneo/src/utils/: bcd.c  buffer-writer.c  md5.c  time.c
firmware/main/: CMakeLists.txt
firmware/main/include/borneo-doser/: scheduler.h
firmware/main/include/borneo-doser/devices/: pump.h
firmware/main/include/borneo-doser/rpc/: doser.h
firmware/main/src/: app-main.c  scheduler.c
firmware/main/src/devices/: pump.c
firmware/main/src/rpc/doser/: rpc-doser.c  rpc-pump.c  rpc-scheduler.c
firmware/scripts/: test.py
hardware/: .gitignore
hardware/borneo-doser-mainboard/: borneo-doser-mainboard-cache.lib  (+5 more)
(+3 files in other folders)
