FILE(GLOB_RECURSE BORNEO_DEVICE_C_SOURCES 
    "./src/*.c" 
)

FILE(GLOB_RECURSE BORNEO_DEVICE_CPP_SOURCES 
    "./src/*.cpp" 
)

SET(DEVICE_INCLUDE_DIRS "./include")

idf_component_register(
    SRCS ${BORNEO_DEVICE_C_SOURCES} ${BORNEO_DEVICE_CPP_SOURCES}
    INCLUDE_DIRS ${DEVICE_INCLUDE_DIRS}
    REQUIRES borneo
)